--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    
 }
+
 body {
     background-color: lightgray;
 }
+
 .background-color-body {
     position: relative;
     width: 100vw;
@@ -25,15 +26,22 @@ body {
 
 .navchat {
     background-color: #eaeaea;
-    height: 60px;
+    height: 80px;
 }
 
 .nomeutente {
     border-right: 1px solid rgb(165, 165, 165);
 }
 
-img {
-    width: 14%;
+ img {
+    width:50px ;
+    height: 50px;
+} 
+
+.ultimoAccesso {
+    margin-left: 55px;
+    font-size: 12px;
+    color: rgb(156, 156, 156);
 }
 
 .notifiche {
@@ -42,6 +50,7 @@ img {
 }
 
 .chat-space {
+    margin-top: 20px;
     height:85%;
     background-image:url("https://i.redd.it/qwd83nc4xxf41.jpg");
     opacity: 0.4;
@@ -56,6 +65,7 @@ img {
 }
 
 .cercaContatti {
+    height: 35px;
     width: 300px;
     background-color: white;
     margin: 2px 0 ;
@@ -83,5 +93,4 @@ img {
     padding: 3px;
     background-color: #c4daae;
     border-radius: 7px;
-
 }
