--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 .background-color-body {
     position: relative;
     width: 100vw;
-    height: 100px;
+    height: 120px;
     background-color:aqua ;
 }
 
@@ -29,8 +29,11 @@ body {
     height: 80px;
 }
 
-.nomeutente {
-    border-right: 1px solid rgb(165, 165, 165);
+.navchat.destra {
+    border-left: 1px solid rgb(165, 165, 165);
+}
+.icone {
+    font-size: 20px;
 }
 
  img {
@@ -45,18 +48,29 @@ body {
 }
 
 .notifiche {
-    height: 70px ;
+    height: auto ;
     background-color: #9ed9f8;
 }
 
 .chat-space {
     margin-top: 20px;
-    height:85%;
+    height: 80%;
     background-image:url("https://i.redd.it/qwd83nc4xxf41.jpg");
-    opacity: 0.4;
+    border-left: 1px solid rgb(165, 165, 165);;
+    opacity: 0.6;
     position: absolute;
     top: 60px;
 }
+
+.bi-bell-slash-fill {
+    font-size: 30px;
+    color:#9ed9f8;
+    background-color: white;
+    border-radius:50%;
+    margin-right: 10px;
+    padding:2px;
+}
+
 
 .notifiche-desktop {
     color: grey;
@@ -64,33 +78,56 @@ body {
     cursor: pointer;
 }
 
-.cercaContatti {
+.cerca-contatti {
     height: 35px;
-    width: 300px;
+    width: 100%;
     background-color: white;
     margin: 2px 0 ;
-    width: 280px;
 }
 
-.listaContatti {
+.lista-contatti {
     height:60px ;
     background-color: white;
 }
 
-.chatContainerSinistra { 
-    margin: 2px 40px;
-    width: 60px;
+ul {
+    list-style-type: none;
+}
+
+.chat-container-sinistra {
+    margin: 2px 15px;
     height: auto;
     padding: 3px;
     background-color: white;
     border-radius: 7px;
 }
 
-.chatContainerDestra {
-    margin: 2px 40px;
-    width: 60px;
+.chat-container-destra {
+    margin: 2px 15px; 
     height: auto;
     padding: 3px;
     background-color: #c4daae;
     border-radius: 7px;
+    opacity: 1;
 }
+
+.footer-chat-bar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%; 
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: #f2eeea;
+    opacity: 1;
+}
+
+.place-holder-messaggio{
+    width: 80%;
+}
+
+.float-right {
+    float:right;
+} 
