--- a/style.css
+++ b/style.css
@@ -36,12 +36,12 @@ body {
     font-size: 20px;
 }
 
- img {
+img {
     width:50px ;
     height: 50px;
 } 
 
-.ultimoAccesso {
+.ultimo-accesso {
     margin-left: 55px;
     font-size: 12px;
     color: rgb(156, 156, 156);
@@ -86,14 +86,30 @@ body {
 }
 
 .lista-contatti {
-    height:60px ;
+    height:auto ;
     background-color: white;
+} 
+.foto-profilo {
+    cursor: pointer;
 }
+.data {
+    font-size: 12px;
+    color: rgb(156, 156, 156);
+    float: right; 
+    margin-top: 3px;
+} 
 
+.testo {
+    margin-left: 50px;
+    margin-bottom: 15px;
+    font-size: 14px;
+}
 ul {
     list-style-type: none;
 }
-
+li {
+    list-style-type: none;
+}
 .chat-container-sinistra {
     margin: 2px 15px;
     height: auto;
