--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 
 .navchat {
     background-color: #eaeaea;
-    height: 80px;
+    min-height: 80px;
 }
 
 .navchat.destra {
@@ -34,6 +34,7 @@ body {
 }
 .icone {
     font-size: 20px;
+    cursor: pointer;
 }
 
 img {
@@ -54,7 +55,7 @@ img {
 
 .chat-space {
     margin-top: 20px;
-    height: 80%;
+    height: 80vh;
     background-image:url("https://i.redd.it/qwd83nc4xxf41.jpg");
     border-left: 1px solid rgb(165, 165, 165);;
     opacity: 0.6;
@@ -80,15 +81,16 @@ img {
 
 .cerca-contatti {
     height: 35px;
-    width: 100%;
+    width: 90%;
     background-color: white;
     margin: 2px 0 ;
 }
 
 .lista-contatti {
-    height:auto ;
+    height:75px ;
     background-color: white;
 } 
+
 .foto-profilo {
     cursor: pointer;
 }
